--- a/edgedb-composable-query-derive/Cargo.toml
+++ b/edgedb-composable-query-derive/Cargo.toml
@@ -1,20 +1,24 @@
 [package]
     name    = "edgedb-composable-query-derive"
-    version = "0.1.0"
+    version = "0.0.1"
     edition = "2021"
     # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+    license       = "MIT OR Apache-2.0"
+    authors       = ["Valentin Golev"]
+    description   = "ComposableQuery trait derivation for EdgeDB. Use with edgedb-composable-query."
+    documentation = "https://docs.rs/edgedb-composable-query-derive"
 
 [lib]
     proc-macro = true
 
 [dependencies]
-    darling = { version = "0.20", features = ["diagnostics"] }
-itertools = "0.11.0"
-proc-macro2 = "1.0.69"
-quote = "1"
-    syn     = { version = "2", features = ["printing"] }
+    darling     = { version = "0.20", features = ["diagnostics"] }
+    itertools   = "0.11.0"
+    proc-macro2 = "1.0.69"
+    quote       = "1"
+    syn         = { version = "2", features = ["printing"] }
 
 [dev-dependencies]
-insta = "1.34.0"
-prettyplease = "0.2.15"
-    trybuild = "1.0.85"
+    insta        = "1.34.0"
+    prettyplease = "0.2.15"
+    trybuild     = "1.0.85"
