--- a/edgedb-composable-query/Cargo.toml
+++ b/edgedb-composable-query/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-    name    = "edgedb-composable-query"
-    version = "0.1.0"
-    edition = "2021"
+    name          = "edgedb-composable-query"
+    version       = "0.0.1"
+    edition       = "2021"
+    license       = "MIT OR Apache-2.0"
+    authors       = ["Valentin Golev"]
+    description   = "ComposableQuery trait for EdgeDB. Use with edgedb-composable-query-derive."
+    documentation = "https://docs.rs/edgedb-composable-query"
 
     # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
