--- a/edgedb-composable-query/Cargo.toml
+++ b/edgedb-composable-query/Cargo.toml
@@ -10,5 +10,7 @@
     # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.6.20"
     edgedb-protocol = "0.6.0"
+edgedb-tokio = "0.5.0"
     itertools       = "0.11"
