--- a/edgedb-composable-query-old/Cargo.toml
+++ b/edgedb-composable-query-old/Cargo.toml
@@ -10,13 +10,7 @@
     # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-    edgedb-protocol = "0.6"
-    edgedb-tokio    = "0.5"
+axum = "0.6.20"
+    edgedb-protocol = "0.6.0"
+edgedb-tokio = "0.5.0"
     itertools       = "0.11"
-    nonempty        = "0.9"
-
-    anyhow = "1"
-
-
-[dev-dependencies]
-    tokio = { version = "1.34.0", features = ["full"] }
