--- a/edgedb-composable-query/Cargo.toml
+++ b/edgedb-composable-query/Cargo.toml
@@ -15,10 +15,13 @@
     itertools       = "0.11"
     nonempty        = "0.9"
 
-    anyhow = "1"
-serde = "1.0.193"
-serde_json = "1.0.108"
+    anyhow     = "1"
+    serde      = "1.0.193"
+    serde_json = "1.0.108"
+
+    edgedb-composable-query-derive = { path = "../edgedb-composable-query-derive" }
 
 
 [dev-dependencies]
-    tokio = { version = "1.34.0", features = ["full"] }
+    tokio      = { version = "1.34.0", features = ["full"] }
+    tokio-test = "0.4"
