--- a/edgedb-composable-query/Cargo.toml
+++ b/edgedb-composable-query/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
     name          = "edgedb-composable-query"
-    version       = "0.0.1"
+    version       = "0.0.2"
     edition       = "2021"
     license       = "MIT OR Apache-2.0"
     authors       = ["Valentin Golev"]
@@ -19,6 +19,7 @@
     serde      = "1.0.193"
     serde_json = "1.0.108"
 
+    # edgedb-composable-query-derive = "0.0.2"
     edgedb-composable-query-derive = { path = "../edgedb-composable-query-derive" }
 
 
