--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -8,3 +8,9 @@
 [dependencies]
     edgedb-composable-query-derive = { path = "../edgedb-composable-query-derive" }
     edgedb-composable-query        = { path = "../edgedb-composable-query" }
+    edgedb-protocol                = "0.6.0"
+    axum                           = "0.6.20"
+    edgedb-tokio                   = "0.5.0"
+
+[dev-dependencies]
+    tokio = { version = "1.34.0", features = ["full"] }
