--- a/edgedb-composable-query/Cargo.toml
+++ b/edgedb-composable-query/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
     name          = "edgedb-composable-query"
-    version       = "0.0.2"
+    version       = "0.0.4"
     edition       = "2021"
     license       = "MIT OR Apache-2.0"
     authors       = ["Valentin Golev"]
@@ -19,11 +19,11 @@
     serde      = "1.0.193"
     serde_json = "1.0.108"
 
-    # edgedb-composable-query-derive = "0.0.2"
-    edgedb-composable-query-derive = { path = "../edgedb-composable-query-derive" }
+    edgedb-composable-query-derive = "0.0.4"
+    # edgedb-composable-query-derive = { path = "../edgedb-composable-query-derive" }
 
 
 [dev-dependencies]
-insta = "1.34.0"
+    insta      = "1.34.0"
     tokio      = { version = "1.34.0", features = ["full"] }
     tokio-test = "0.4"
